demo-app/team-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: team-a
  labels:
    team: team-a
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        team: team-a
        app: web
    spec:
      containers:
        - name: nginx
          image: docker.io/library/nginx:1.27
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
